# thesaurus-gtk

./: CMakeLists.txt  README.md  main.c  makefile  meson.build  thesaurus_gtk.glade
include/: lit_entry.h  sqlite_orm.h
src/: config.h  create_application.c  lit_entry.cpp  main.c  test_cpp_extern.cpp  test_sql.cpp
src/model/: LitEntry.cpp  LitEntry.h  article.cpp  article.h  book.cpp  book.h  lit_entry.cpp  lit_entry.h  person.cpp  person.h
